feat(task): record reporter uuid when commiting task
