# netmito/src/entity/archived_tasks.rs
@@ -26,6 +26,7 @@ pub struct Model {
     pub result: Option<Json>,
     pub upstream_task_uuid: Option<Uuid>,
     pub downstream_task_uuid: Option<Uuid>,
+    pub reporter_uuid: Option<Uuid>,
 }
 
 #[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
